k8s/audit/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: audit
    stack: demo
  name: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
      version: v1
  template:
    metadata:
      labels:
        app: audit
        version: v1
        stack: demo
    spec:
      containers:
      - image: eu.gcr.io/pmoncada-001/istio-poc/audit:latest
        name: audit
        resources: {}
status: {}
