k8s/audit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audit
  name: audit
  namespace: csd
spec:
  ports:
  - name: http-app
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: audit
  type: ClusterIP
status:
  loadBalancer: {}
